Modified title for index and profile pages. Changed color of profile page to match index jumbotron color.

--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>jens_site: profile</title>
+<title>SWHS: student profile</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -18,9 +18,9 @@
     </a>
   </p> 
  <!--  <br> -->
-  <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2>
+  <h2 id="reg_title">Dual Credit English Student Profile:</h2>
   <br>
-  <p>Note: be sure to scroll all the way down for the <span  id="sub">Submit</span> button.</p>
+  <p>Note: be sure to scroll all the way down to find the <span  id="sub">Submit</span> button.</p>
    <br>   
   <form role="form">
     <div class="form_block">
@@ -32,7 +32,7 @@
         <label for="last">Last name:</label>
         <input type="text" class="form-control" id="last" placeholder="Enter last name">
       </div>
-      <label>Telephone:</label>
+      <label>Telephone</label>
       <div class="form-group tab10">
         <label for="homtel">Home:</label>
         <input type="tel" class="form-control" id="homtel" placeholder="Enter home telephone number">
@@ -48,7 +48,7 @@
     </div>
       <!-- <br> -->
       <div class="form_block">
-        <h4>Class schedule:</h4>
+        <h4>Class schedule</h4>
         <div class="tab10">
           <div class="form-group">
             <label for="per1">First period:</label>
