Added bootstrap header to calendar, profile and resources pages.  Removed the note from top of profile page and added a second submit button in it's place.

--- a/calendar.html
+++ b/calendar.html
@@ -1,47 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <title>Dual Cred Eng: Calendar</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-<title>jens_site: home</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="normalize.css">
-<link href='http://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+  <body>
+    <div class="container">
+      <header class="page-header">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="profile.html">Profile</a></li>
+          <!-- <li><a href="calendar.html">Calendar</a></li> -->
+          <li><a href="resources.html">Resources</a></li>
+        </ul>
+        <h3>Calendar</h3>
+      </header>
+    
+      <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
-<body>  
-    <header>
-        <div id="upper_bar"> 
-                <img  id="header_image" src="images/job_ed.jpg"  alt="image">
-                <div id="header_text"><h1>SWHS Dual Credit English<br><small>Jennifer Schoch</small></h1></div>
-        </div> <!-- closes "upper_bar" -->
-            <ul id="nav_container">
-                <li ><a href="index.html">Home</a></li>
-                <li><a href="calendar.html">Calendar</a></li> 
-                <li><a href="register.html">Register</a></li>
-                <li><a href="#" >Resources</a></li>           
-            </ul> 
-    </header>   
-  
-    <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      <!-- <div id="cal_footer">
+          <img id="cal_footer_img" src="images/lewis_486x180.jpg" alt="Lewis quote">
+      </div> -->
 
-     <div id="cal_footer">
-        <img id="cal_footer_img" src="images/lewis_486x180.jpg" alt="Lewis quote">
+      <!-- <div id="cal_logo_div">
+          <svg  id="cal_logo_img" height="70px" width="137px" viewBox="0 0 274 140" > 
+              <defs> 
+                  <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%"> 
+                      <stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" /> 
+                      <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" /> 
+                  </linearGradient> 
+              </defs> 
+              <ellipse cx="137" cy="71" rx="85" ry="55" fill="url(#grad1)" /> 
+              <text fill="#ffffff" font-size="45" font-family="Verdana" x="67" y="86">SWHS</text> 
+              Sorry, your browser does not support inline SVG. 
+          </svg>
+      </div> -->
     </div>
-
-    <div id="cal_logo_div">
-        <svg  id="cal_logo_img" height="70px" width="137px" viewBox="0 0 274 140" > 
-            <defs> 
-                <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%"> 
-                    <stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" /> 
-                    <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" /> 
-                </linearGradient> 
-            </defs> 
-            <ellipse cx="137" cy="71" rx="85" ry="55" fill="url(#grad1)" /> 
-            <text fill="#ffffff" font-size="45" font-family="Verdana" x="67" y="86">SWHS</text> 
-            Sorry, your browser does not support inline SVG. 
-        </svg>
-    </div>
-</body>
+  </body>
 
 </html>
