--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>jens_site: profile</title>
+<title>Dual Cred Eng: Profile</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -11,17 +11,28 @@
 <body>
 
 <div class="container">
-  <br>
+  <!-- <br>
   <p>
     <a href="index.html" class="btn btn-info btn-md">
       <span class="glyphicon glyphicon-arrow-left"></span> Back
     </a>
-  </p> 
- <!--  <br> -->
-  <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2>
+  </p>  -->
+  <header class="page-header">
+    <ul class="nav nav-pills pull-right">
+      <li><a href="index.html">Home</a></li>
+      <!-- <li><a href="profile.html">Profile</a></li> -->
+      <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="resources.html">Resources</a></li>
+    </ul>
+    <h3>Student Profile</h3>
+  </header>
+  <!-- <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2> -->
   <br>
-  <p>Note: be sure to scroll all the way down for the <span  id="sub">Submit</span> button.</p>
-   <br>   
+  <!-- <p>Note: be sure to scroll all the way down for the <span  id="sub">Submit</span> button.</p> -->
+  <div class="form-group">
+    <button type="submit" value="Send" class="btn btn-info" id="submit">Submit</button> 
+  </div> 
+  <br>   
   <form role="form">
     <div class="form_block">
       <div class="form-group">
@@ -190,14 +201,12 @@
         <button type="submit" value="Send" class="btn btn-info" id="submit">Submit</button> 
       </div> 
      <!--  <br> -->
-      <p>
+      <!-- <p>
         <a href="index.html" class="btn btn-info btn-md">
         <span class="glyphicon glyphicon-arrow-left" ></span> Back
         </a>
       </p> 
-      <br>
-
-    
+      <br> -->    
   </form>
 
 </div>
