Modified header for calendar, profile and resources page to read 'Dual Credit English' and added sub-header to identify the page. Added dummy item in header nav to ensure adequate spacing on small scr.

--- a/profile.html
+++ b/profile.html
@@ -26,14 +26,15 @@
   </p>  -->
   <header class="page-header">
     <ul class="nav nav-pills pull-right">
+      <li><a href="#"></a></li><!--placeholder to achieve spacing for small screens-->
       <li><a href="index.html">Home</a></li>
       <!-- <li><a href="profile.html">Profile</a></li> -->
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="resources.html">Resources</a></li>
     </ul>
-    <h3>Student Profile</h3>
+    <h3>Dual Credit English</h3>
   </header>
-  <!-- <h2 id="reg_title">Register for Dual Credit English at SWHS:</h2> -->
+  <h4>Student Profile</h4>
   <br>
   <!-- <p>Note: be sure to scroll all the way down for the <span  id="sub">Submit</span> button.</p> -->
   <div class="form-group">
