--- a/calendar.html
+++ b/calendar.html
@@ -19,12 +19,13 @@
     <div class="container">
       <header class="page-header">
         <ul class="nav nav-pills pull-right">
+          <li><a href="#"></a></li><!--placeholder to achieve spacing for small screens-->
           <li><a href="index.html">Home</a></li>
           <li><a href="profile.html">Profile</a></li>
           <!-- <li><a href="calendar.html">Calendar</a></li> -->
           <li><a href="resources.html">Resources</a></li>
         </ul>
-        <h3>Calendar</h3>
+        <h3>Dual Credit English</h3>
       </header>
       <div class="embed-responsive embed-responsive-4by3">
         <iframe class="embed-responsive-item" src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=swjcs.us_o0718faimp7r084v72sh59qpjg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
