Substituted 'Mrs. Schoch' for 'Southwestern High School' in header. Substituted 'Mrs. Schoch for 'Jennifer Schoch' in jumbotron.

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <li><a href="calendar.html">Calendar</a></li>
           <li><a href="resources.html">Resources</a></li>
         </ul>
-        <h3>Southwestern High School</h3>
+        <h3>Mrs. Schoch</h3>
       </header>
       
       <div class="jumbotron">
         <h1>Dual Credit English</h1>
         <p class="lead">
           <blockquote>
-            <p>In this course we will be......  Please click the <a href="profile.html">Profile</a> link to provide me with some basic information about yourself and please monitor the class calendar to stay informed regarding assignments and due dates.</p><small><cite>Jennifer Schoch</small></cite>
+            <p>In this course we will be......  Please click the <a href="profile.html">Profile</a> link to provide me with some basic information about yourself and please monitor the class calendar to stay informed regarding assignments and due dates.</p><small><cite>Mrs. Schoch</small></cite>
           </blockquote>
         </p>
         <h4>Google links:</h4>
