Major overhaul: changed page.html files to page.php files so that they can be maintained in php header and footer files. Changed form submission and processing so that it is all done on the server side using php.

--- a/resources.html
+++ b/resources.html
@@ -20,12 +20,15 @@
       <header class="page-header">
         <ul class="nav nav-pills pull-right">
           <li><a href="index.html">Home</a></li>
-          <li><a href="profile.html">Profile</a></li>
+          <li><a href="profile.php">Profile</a></li>
           <li><a href="calendar.html">Calendar</a></li>
           <!-- <li><a href="resources.html">Resources</a></li> -->
         </ul>
         <h3>Dual Credit English</h3>
       </header>
       <h4>Resources</h4>
-    </div>
-  </body>
+   <!--  </div>
+  </body> -->
+<?php
+  include("inc/footer.php");
+  ?>
