--- a/calendar.html
+++ b/calendar.html
@@ -19,9 +19,9 @@
     <div class="container">
       <header class="page-header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="profile.html">Profile</a></li>
-          <!-- <li><a href="calendar.html">Calendar</a></li> -->
+          <li><a href="index.php">Home</a></li>
+          <li><a href="profile.php">Profile</a></li>
+          <!-- <li><a href="calendar.php">Calendar</a></li> -->
           <li><a href="resources.html">Resources</a></li>
         </ul>
         <h3>Dual Credit English</h3>
