--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <header class="page-header">
         <ul class="nav nav-pills pull-right">
           <!-- <li><a href="index.html">Home</a></li> -->
-          <li><a href="profile.html">Profile</a></li>
-          <li><a href="calendar.html">Calendar</a></li>
-          <li><a href="resources.html">Resources</a></li>
+          <li><a href="profile.php">Profile</a></li>
+          <li><a href="calendar.php">Calendar</a></li>
+          <li><a href="resources.php">Resources</a></li>
         </ul>
         <h3>Mrs. Schoch</h3>
       </header>
@@ -44,17 +44,19 @@
           <a class="btn btn-info btn-sm" href="#" >Drive</a>
         </p> 
       </div>
+      
       <div id="foot">
-        <p>&copy; 2015 SWHS - Jennifer Schoch</p>
-        <svg  id="logo_img" height="35px" width="69px" viewBox="0 0 274 140" > 
+       <!-- <p>&copy; 2015 SWHS - Jennifer Schoch</p> -->
+        <svg  id="logo_img" width="300px" height="35px" viewBox="0 0 1200 140" > 
             <defs> 
                 <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%"> 
                     <stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" /> 
                     <stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" /> 
                 </linearGradient> 
             </defs> 
-            <ellipse cx="137" cy="71" rx="85" ry="55" fill="url(#grad1)" /> 
-            <text fill="#ffffff" font-size="45" font-family="Verdana" x="67" y="86">SWHS</text> 
+            <ellipse cx="85" cy="71" rx="85" ry="55" fill="url(#grad1)" /> 
+            <text fill="#ffffff" font-size="43" font-family="Verdana" x="20" y="86">SWHS</text> 
+            <text fill="#000000" font-size="45" font-family="Verdana" font-weight="bold" x="200" y="86">&copy;2015 SWHS - Jennifer Schoch</text> 
             Sorry, your browser does not support inline SVG. 
         </svg>
       </div>
